# Elevate-Engine

./: .gitignore  .gitmodules  AddComponent_8h.html  AddComponent_8h_source.html  AkBank_8cpp.html  AkBank_8cpp_source.html  AkBank_8h.html  AkBank_8h.js  AkBank_8h_source.html  AnalyserPanel_8cpp.html  AnalyserPanel_8cpp_source.html  AnalyserPanel_8h.html  AnalyserPanel_8h_source.html  ApplicationEvent_8h.html  ApplicationEvent_8h.js  ApplicationEvent_8h_source.html  Application_8cpp.html  Application_8cpp.js  Application_8cpp_source.html  Application_8h.html  Application_8h.js  Application_8h_source.html  Assert_8h.html  Assert_8h.js  Assert_8h_source.html  AssetBrowserPanel_8cpp.html  AssetBrowserPanel_8cpp_source.html  AssetBrowserPanel_8h.html  AssetBrowserPanel_8h.js  AssetBrowserPanel_8h_source.html  AudioDistanceProbe_8cpp.html  AudioDistanceProbe_8cpp_source.html  AudioDistanceProbe_8h.html  AudioDistanceProbe_8h.js  AudioDistanceProbe_8h_source.html  Buffer_8cpp.html  Buffer_8cpp_source.html  Buffer_8h.html  Buffer_8h.js  Buffer_8h_source.html  (+1336 more)
ElevateEngine/: CMakeLists.txt  ComponentRegistry.cpp  ElevateEngine.cmake  cpp.hint  engine.lua
ElevateEngine/ElevateEngine/: DebugRenderer.cpp
ElevateEngine/Resources/Editor/Config/: file_browser.json
ElevateEngine/Resources/Editor/Shaders/: debug.vert  grid.frag
ElevateEngine/Resources/Engine/Cubemap/: default.sky
ElevateEngine/Resources/Templates/BasicProject/: description.txt
ElevateEngine/Web/: index.template.html
ElevateEngine/Web/Templates/: index.template.html
ElevateEngine/src/: ElevateEngine.h  eepch.cpp  eepch.h  rhpch.cpp
ElevateEngine/src/ElevateEngine/: Application.cpp  Application.h  Assert.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Physics.h  Window.h
ElevateEngine/src/ElevateEngine/Audio/: SoundEngine.cpp  SoundEngine.h
ElevateEngine/src/ElevateEngine/Core/: Application.cpp  Application.h  Assert.h  Byte.h  Command.cpp  Command.h  Component.h  ComponentRegistry.cpp  ComponentRegistry.h  ComponentRegistry.inl  ComponentWrapper.h  Core.h  Data.h  EECategory.h  EEObject.cpp  EEObject.h  EEObjectPtr.h  EntryPoint.h  Files.h  GameContext.cpp  GameContext.h  GameObject.cpp  GameObject.h  GameObject.inl  Guid.cpp  Guid.h  Layer.h  (+26 more)
ElevateEngine/src/RedHammer/: Input.h  KeyCodes.h  Layer.cpp
ElevateEngine/web/: index.template.html
Sandbox/: .eeproj  CMakeLists.txt  Sandbox.cmake  app.config  frag.shader  imgui.ini  main.frag  main.vert  sandbox.lua
Sandbox/Content/Shaders/: debug.frag  main.frag  main.vert
Sandbox/Content/cubemap/: mountain.sky
Sandbox/Engine/Cubemap/: default.sky
Sandbox/Source/: SandboxApp.cpp
Sandbox/WwiseProject/: IntegrationDemo.jfiset.validationcache  IntegrationDemo.jfiset.wsettings  IntegrationDemo.wproj  WwiseProject.wproj
Sandbox/WwiseProject/Attenuations/: Default Work Unit.wwu  Factory Attenuations.wwu
Sandbox/WwiseProject/Busses/: Default Work Unit.wwu  Reflect_Demo.wwu
Sandbox/WwiseProject/Containers/: 3D_Audio_Demo.wwu  3D_Bus_Demo.wwu  Channels_Demo.wwu  Default Work Unit.wwu  Dialogues.wwu  External Sources.wwu  Footsteps With Multiple Variables.wwu  MIDI.wwu  Reflect_Demo.wwu  Spatial_Audio_Demo.wwu
Sandbox/WwiseProject/Control Surface Sessions/: Default Work Unit.wwu
Sandbox/WwiseProject/Conversion Settings/: Default Work Unit.wwu  External Sources.wwu  Factory Conversion Settings.wwu  Factory Soundseed Grain.wwu
Sandbox/WwiseProject/Devices/: Default Work Unit.wwu
Sandbox/WwiseProject/Dynamic Dialogue/: Default Work Unit.wwu  Dialogue.wwu
Sandbox/WwiseProject/Effects/: Default Work Unit.wwu  Factory AK Convolution Reverb Effects Ambisonics.wwu  Factory AK Convolution Reverb Effects Stereo.wwu  Factory Effects.wwu  Factory Reflect.wwu  Footsteps Effects.wwu
Sandbox/WwiseProject/Events/: 3D_Audio_Demo.wwu  3dBusses.wwu  Channels_Demo.wwu  Default Work Unit.wwu  External Sources.wwu  InteractiveMusic.wwu  MIDI.wwu  MusicCallbacks.wwu  Reflect_Demo.wwu  Spatial_Audio_Demo.wwu
Sandbox/WwiseProject/Game Parameters/: Default Work Unit.wwu  Factory Motion.wwu  Factory Soundseed Grain.wwu  Footsteps With Multiple Variables.wwu
Sandbox/WwiseProject/Metadata/: Default Work Unit.wwu
Sandbox/WwiseProject/Mixing Sessions/: Default Work Unit.wwu
Sandbox/WwiseProject/Modulators/: Default Work Unit.wwu
Sandbox/WwiseProject/Presets/: Default Work Unit.wwu  Factory Reflect.wwu  Factory Spatial Audio.wwu
Sandbox/WwiseProject/Queries/: Default Work Unit.wwu  Factory Queries.wwu
Sandbox/WwiseProject/Sidechain Mixes/: Default Work Unit.wwu
Sandbox/WwiseProject/SoundBanks/: Channels_Demo.wwu  Default Work Unit.wwu  Reflect_Demo.wwu  Surface Related Banks.wwu
Sandbox/WwiseProject/Soundcaster Sessions/: Default Work Unit.wwu  Factory Tencent GME.wwu
Sandbox/WwiseProject/States/: Default Work Unit.wwu  Dialogue.wwu
Sandbox/WwiseProject/Switches/: Default Work Unit.wwu  Footsteps With Multiple Variables.wwu
Sandbox/WwiseProject/Triggers/: Default Work Unit.wwu
Sandbox/WwiseProject/Virtual Acoustics/: Default Work Unit.wwu
Sandbox/WwiseProject/myFilePackagerProjects/: ExternalSources (Android).wfpproj  ExternalSources (Emscripten).wfpproj  ExternalSources (OpenHarmony).wfpproj  ExternalSources (Switch2).wfpproj
Sandbox/cubemap/: default.sky
Sandbox/editor/config/: file_browser.json
Sandbox/shader/: PosColor.vert  grid.frag  grid.vert  main.frag  main.vert  skybox.vert
Sandbox/src/: SandboxApp.cpp
(+595 files in other folders)
